Replace spring-authn-server users with reusable uptime user.